--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "tailwindcss": "^3.4.17",
     "vite": "^6.2.4",
     "vite-plugin-vue-devtools": "^7.7.2"
+  },
+  "volta": {
+    "node": "18.18.0"
   }
 }
