--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "axios": "^1.9.0",
     "dotenv": "^16.5.0",
     "pinia": "^3.0.2",
+    "vite": "^6.2.4",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
-    "vite": "^6.2.4"
+    "vue-toastification": "^2.0.0-rc.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
