--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.9.0",
     "dotenv": "^16.5.0",
     "pinia": "^3.0.2",
+    "pinia-plugin-persistedstate": "^4.3.0",
     "vite": "^6.2.4",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
